chore: configure pre-commit and commit-msg hooks

--- a/package.json
+++ b/package.json
@@ -4,5 +4,30 @@
   "main": "index.js",
   "author": "Anderson Begossi <andersonbegossi@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "fix": "run-s \"fix:* {@}\" --",
+    "fix:lint": "eslint --fix --no-error-on-unmatched-pattern",
+    "fix:format": "prettier --write",
+    "lint": "yarn fix:lint src/**/*.{js,ts,md,json}",
+    "format": "yarn fix:format 'src/**/*.(js|ts|md|json)'",
+    "prepare": "husky install"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "./src/**/*.{js,md,json}": [
+      "yarn fix"
+    ]
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^11.1.2",
+    "npm-run-all": "^4.1.5"
+  }
 }
