--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "dev": "nodemon --exec babel-node src/index.js",
     "prebuild": "rm -Rf ./dist",
     "build": "babel src --extensions \".js\" --ignore \"*.spec.js,*.test.js\" --out-dir dist --copy-files",
-
     "fix": "run-s \"fix:* {@}\" --",
     "fix:lint": "eslint --fix --no-error-on-unmatched-pattern",
     "fix:format": "prettier --write",
@@ -45,5 +44,8 @@
     "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1"
+  },
+  "dependencies": {
+    "koa": "^2.13.3"
   }
 }
