--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "lint-staged": "^11.1.2",
     "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "prisma": "3.2.1"
   },
   "dependencies": {
     "@koa/router": "^10.1.1",
+    "@prisma/client": "3.2.1",
     "dotenv": "^10.0.0",
     "dotenv-safe": "^8.2.0",
     "koa": "^2.13.3"
