chore: add DB_HOST and DB_URL envs

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,10 @@
 SERVER_PORT=9901
 
 ## DB
+DB_HOST=localhost
 DB_PORT=
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
+DB_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
+
