chore: install koa-bodyparser

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@prisma/client": "3.2.1",
     "dotenv": "^10.0.0",
     "dotenv-safe": "^8.2.0",
-    "koa": "^2.13.3"
+    "koa": "^2.13.3",
+    "koa-bodyparser": "^4.3.0"
   }
 }
