--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@koa/router": "^10.1.1",
     "@prisma/client": "3.2.1",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "dotenv-safe": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
